--- a/public/assets/pages/forms/advanced.html
+++ b/public/assets/pages/forms/advanced.html
@@ -47,7 +47,7 @@
     </ul>
 
     <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
+    <ul class="ml-auto navbar-nav">
       <!-- Navbar Search -->
       <li class="nav-item">
         <a class="nav-link" data-widget="navbar-search" href="#" role="button">
@@ -80,14 +80,14 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+              <img src="../../dist/img/user1-128x128.jpg" alt="User Avatar" class="mr-3 img-size-50 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Brad Diesel
                   <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
                 </h3>
                 <p class="text-sm">Call me whenever you can...</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                <p class="text-sm text-muted"><i class="mr-1 far fa-clock"></i> 4 Hours Ago</p>
               </div>
             </div>
             <!-- Message End -->
@@ -96,14 +96,14 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../../dist/img/user8-128x128.jpg" alt="User Avatar" class="mr-3 img-size-50 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   John Pierce
                   <span class="float-right text-sm text-muted"><i class="fas fa-star"></i></span>
                 </h3>
                 <p class="text-sm">I got your message bro</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                <p class="text-sm text-muted"><i class="mr-1 far fa-clock"></i> 4 Hours Ago</p>
               </div>
             </div>
             <!-- Message End -->
@@ -112,14 +112,14 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../../dist/img/user3-128x128.jpg" alt="User Avatar" class="mr-3 img-size-50 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Nora Silvester
                   <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
                 </h3>
                 <p class="text-sm">The subject goes here</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                <p class="text-sm text-muted"><i class="mr-1 far fa-clock"></i> 4 Hours Ago</p>
               </div>
             </div>
             <!-- Message End -->
@@ -138,18 +138,18 @@
           <span class="dropdown-item dropdown-header">15 Notifications</span>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item">
-            <i class="fas fa-envelope mr-2"></i> 4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
+            <i class="mr-2 fas fa-envelope"></i> 4 new messages
+            <span class="float-right text-sm text-muted">3 mins</span>
           </a>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item">
-            <i class="fas fa-users mr-2"></i> 8 friend requests
-            <span class="float-right text-muted text-sm">12 hours</span>
+            <i class="mr-2 fas fa-users"></i> 8 friend requests
+            <span class="float-right text-sm text-muted">12 hours</span>
           </a>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item">
-            <i class="fas fa-file mr-2"></i> 3 new reports
-            <span class="float-right text-muted text-sm">2 days</span>
+            <i class="mr-2 fas fa-file"></i> 3 new reports
+            <span class="float-right text-sm text-muted">2 days</span>
           </a>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
@@ -180,7 +180,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="pb-3 mt-3 mb-3 user-panel d-flex">
         <div class="image">
           <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
@@ -849,7 +849,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <div class="container-fluid">
-        <div class="row mb-2">
+        <div class="mb-2 row">
           <div class="col-sm-6">
             <h1>Advanced Form</h1>
           </div>
@@ -1289,7 +1289,7 @@
                         <i class="far fa-calendar-alt"></i>
                       </span>
                     </div>
-                    <input type="text" class="form-control float-right" id="reservation">
+                    <input type="text" class="float-right form-control" id="reservation">
                   </div>
                   <!-- /.input group -->
                 </div>
@@ -1303,7 +1303,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="far fa-clock"></i></span>
                     </div>
-                    <input type="text" class="form-control float-right" id="reservationtime">
+                    <input type="text" class="float-right form-control" id="reservationtime">
                   </div>
                   <!-- /.input group -->
                 </div>
@@ -1314,7 +1314,7 @@
                   <label>Date range button:</label>
 
                   <div class="input-group">
-                    <button type="button" class="btn btn-default float-right" id="daterange-btn">
+                    <button type="button" class="float-right btn btn-default" id="daterange-btn">
                       <i class="far fa-calendar-alt"></i> Date range picker
                       <i class="fas fa-caret-down"></i>
                     </button>
@@ -1340,7 +1340,7 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <!-- checkbox -->
-                    <div class="form-group clearfix">
+                    <div class="clearfix form-group">
                       <div class="icheck-primary d-inline">
                         <input type="checkbox" id="checkboxPrimary1" checked>
                         <label for="checkboxPrimary1">
@@ -1361,7 +1361,7 @@
                   </div>
                   <div class="col-sm-6">
                     <!-- radio -->
-                    <div class="form-group clearfix">
+                    <div class="clearfix form-group">
                       <div class="icheck-primary d-inline">
                         <input type="radio" id="radioPrimary1" name="r1" checked>
                         <label for="radioPrimary1">
@@ -1385,7 +1385,7 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <!-- checkbox -->
-                    <div class="form-group clearfix">
+                    <div class="clearfix form-group">
                       <div class="icheck-danger d-inline">
                         <input type="checkbox" checked id="checkboxDanger1">
                         <label for="checkboxDanger1">
@@ -1406,7 +1406,7 @@
                   </div>
                   <div class="col-sm-6">
                     <!-- radio -->
-                    <div class="form-group clearfix">
+                    <div class="clearfix form-group">
                       <div class="icheck-danger d-inline">
                         <input type="radio" name="r2" checked id="radioDanger1">
                         <label for="radioDanger1">
@@ -1430,7 +1430,7 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <!-- checkbox -->
-                    <div class="form-group clearfix">
+                    <div class="clearfix form-group">
                       <div class="icheck-success d-inline">
                         <input type="checkbox" checked id="checkboxSuccess1">
                         <label for="checkboxSuccess1">
@@ -1451,7 +1451,7 @@
                   </div>
                   <div class="col-sm-6">
                     <!-- radio -->
-                    <div class="form-group clearfix">
+                    <div class="clearfix form-group">
                       <div class="icheck-success d-inline">
                         <input type="radio" name="r3" checked id="radioSuccess1">
                         <label for="radioSuccess1">
@@ -1500,7 +1500,7 @@
               <div class="card-header">
                 <h3 class="card-title">bs-stepper</h3>
               </div>
-              <div class="card-body p-0">
+              <div class="p-0 card-body">
                 <div class="bs-stepper">
                   <div class="bs-stepper-header" role="tablist">
                     <!-- your steps here -->
@@ -1592,7 +1592,7 @@
                   </div>
                 </div>
                 <div class="table table-striped files" id="previews">
-                  <div id="template" class="row mt-2">
+                  <div id="template" class="mt-2 row">
                     <div class="col-auto">
                         <span class="preview"><img src="data:," alt="" data-dz-thumbnail /></span>
                     </div>
