--- a/public/assets/pages/examples/project-edit.html
+++ b/public/assets/pages/examples/project-edit.html
@@ -31,7 +31,7 @@
     </ul>
 
     <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
+    <ul class="ml-auto navbar-nav">
       <!-- Navbar Search -->
       <li class="nav-item">
         <a class="nav-link" data-widget="navbar-search" href="#" role="button">
@@ -64,14 +64,14 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+              <img src="../../dist/img/user1-128x128.jpg" alt="User Avatar" class="mr-3 img-size-50 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Brad Diesel
                   <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
                 </h3>
                 <p class="text-sm">Call me whenever you can...</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                <p class="text-sm text-muted"><i class="mr-1 far fa-clock"></i> 4 Hours Ago</p>
               </div>
             </div>
             <!-- Message End -->
@@ -80,14 +80,14 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../../dist/img/user8-128x128.jpg" alt="User Avatar" class="mr-3 img-size-50 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   John Pierce
                   <span class="float-right text-sm text-muted"><i class="fas fa-star"></i></span>
                 </h3>
                 <p class="text-sm">I got your message bro</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                <p class="text-sm text-muted"><i class="mr-1 far fa-clock"></i> 4 Hours Ago</p>
               </div>
             </div>
             <!-- Message End -->
@@ -96,14 +96,14 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="../../dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="../../dist/img/user3-128x128.jpg" alt="User Avatar" class="mr-3 img-size-50 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Nora Silvester
                   <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
                 </h3>
                 <p class="text-sm">The subject goes here</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                <p class="text-sm text-muted"><i class="mr-1 far fa-clock"></i> 4 Hours Ago</p>
               </div>
             </div>
             <!-- Message End -->
@@ -122,18 +122,18 @@
           <span class="dropdown-item dropdown-header">15 Notifications</span>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item">
-            <i class="fas fa-envelope mr-2"></i> 4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
+            <i class="mr-2 fas fa-envelope"></i> 4 new messages
+            <span class="float-right text-sm text-muted">3 mins</span>
           </a>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item">
-            <i class="fas fa-users mr-2"></i> 8 friend requests
-            <span class="float-right text-muted text-sm">12 hours</span>
+            <i class="mr-2 fas fa-users"></i> 8 friend requests
+            <span class="float-right text-sm text-muted">12 hours</span>
           </a>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item">
-            <i class="fas fa-file mr-2"></i> 3 new reports
-            <span class="float-right text-muted text-sm">2 days</span>
+            <i class="mr-2 fas fa-file"></i> 3 new reports
+            <span class="float-right text-sm text-muted">2 days</span>
           </a>
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
@@ -164,7 +164,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="pb-3 mt-3 mb-3 user-panel d-flex">
         <div class="image">
           <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
@@ -833,7 +833,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <div class="container-fluid">
-        <div class="row mb-2">
+        <div class="mb-2 row">
           <div class="col-sm-6">
             <h1>Project Edit</h1>
           </div>
@@ -930,7 +930,7 @@
                 </button>
               </div>
             </div>
-            <div class="card-body p-0">
+            <div class="p-0 card-body">
               <table class="table">
                 <thead>
                   <tr>
@@ -944,7 +944,7 @@
                   <tr>
                     <td>Functional-requirements.docx</td>
                     <td>49.8005 kb</td>
-                    <td class="text-right py-0 align-middle">
+                    <td class="py-0 text-right align-middle">
                       <div class="btn-group btn-group-sm">
                         <a href="#" class="btn btn-info"><i class="fas fa-eye"></i></a>
                         <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i></a>
@@ -953,7 +953,7 @@
                   <tr>
                     <td>UAT.pdf</td>
                     <td>28.4883 kb</td>
-                    <td class="text-right py-0 align-middle">
+                    <td class="py-0 text-right align-middle">
                       <div class="btn-group btn-group-sm">
                         <a href="#" class="btn btn-info"><i class="fas fa-eye"></i></a>
                         <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i></a>
@@ -962,7 +962,7 @@
                   <tr>
                     <td>Email-from-flatbal.mln</td>
                     <td>57.9003 kb</td>
-                    <td class="text-right py-0 align-middle">
+                    <td class="py-0 text-right align-middle">
                       <div class="btn-group btn-group-sm">
                         <a href="#" class="btn btn-info"><i class="fas fa-eye"></i></a>
                         <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i></a>
@@ -971,7 +971,7 @@
                   <tr>
                     <td>Logo.png</td>
                     <td>50.5190 kb</td>
-                    <td class="text-right py-0 align-middle">
+                    <td class="py-0 text-right align-middle">
                       <div class="btn-group btn-group-sm">
                         <a href="#" class="btn btn-info"><i class="fas fa-eye"></i></a>
                         <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i></a>
@@ -980,7 +980,7 @@
                   <tr>
                     <td>Contract-10_12_2014.docx</td>
                     <td>44.9715 kb</td>
-                    <td class="text-right py-0 align-middle">
+                    <td class="py-0 text-right align-middle">
                       <div class="btn-group btn-group-sm">
                         <a href="#" class="btn btn-info"><i class="fas fa-eye"></i></a>
                         <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i></a>
@@ -998,7 +998,7 @@
       <div class="row">
         <div class="col-12">
           <a href="#" class="btn btn-secondary">Cancel</a>
-          <input type="submit" value="Save Changes" class="btn btn-success float-right">
+          <input type="submit" value="Save Changes" class="float-right btn btn-success">
         </div>
       </div>
     </section>
